Minor Alignment fixes

--- a/register/style.css
+++ b/register/style.css
@@ -25,13 +25,13 @@ body{
 .label{
     font-size: 4vh;
     margin-bottom: 3px;
-    margin-top: 12px;
+    margin-top: 14px;
     color: whitesmoke;
 }
 
 input{
     width: 85%;
-    height: 5vh;
+    height: 7vh;
     border-radius: 5px;
     border: 1px solid #ccc;
     border-top: none;
@@ -43,11 +43,11 @@ input{
 }
 
 .formbox{
-    border-radius: 5%;
+    border-radius: 7px;
     width: 50%;
     margin: auto;
     background-color: #456d776e;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 3px ;
 }
 
 input:hover{
@@ -60,7 +60,7 @@ input:focus{
 }
 
 #btn-submit{
-    margin-top: 20px;
+    margin-top: 5vh;
     height: 3em;
     outline: none;
     border:none;
@@ -75,7 +75,7 @@ input:focus{
     color: #ccc;
 }
 
-@media(max-width: 600px){
+@media(max-width: 980px){
     .formbox{
         width: 90%;
     }
